--- a/index.html
+++ b/index.html
@@ -680,8 +680,8 @@
       actions.showMenu();
     }
 
+    // 页面加载完成后初始化
     document.addEventListener('DOMContentLoaded', initApp);
   </script>
 </body>
 </html>
-
