--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#e63946">
-  <link rel="apple-touch-icon" href="https://picsum.photos/seed/menuicon/128/128">
+  <link rel="apple-touch-icon" href="https://ibb.co/rGbQV6P5">
   <link rel="manifest" href="manifest.json">
   <link rel="icon" href="https://picsum.photos/seed/menuicon/64/64">
   <title>吴佳怡的menu</title>
@@ -685,3 +685,4 @@
   </script>
 </body>
 </html>
+
