--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#e63946">
   <link rel="apple-touch-icon" href="https://ibb.co/rGbQV6P5">
   <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="https://picsum.photos/seed/menuicon/64/64">
+  <link rel="icon" href="https://ibb.co/rGbQV6P5">
   <title>吴佳怡的menu</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -685,4 +685,5 @@
   </script>
 </body>
 </html>
+
 
